# odoo-mailmunch

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml
.github/workflows/: docker-publish.yml
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_email_external_id.py
backend/app/: config.py  deps.py  main.py
backend/app/models/: __init__.py  cache.py  email.py  ignore_rule.py  po_draft.py  po_tracking.py  session.py  settings.py
backend/app/routers/: auth.py  emails.py  odoo_proxy.py  po_drafts.py  po_tracking.py  settings.py  triage.py
backend/app/services/: email_classifier.py  email_parser.py  encryption.py  jwt_service.py  odoo_auth.py  odoo_client.py  po_builder.py  product_matcher.py  text_extractor.py  tracking_parser.py  vendor_matcher.py
backend/app/workers/: email_processor.py  m365_poller.py  odoo_sync.py  trigger.py  worker.py
backend/tests/: conftest.py  test_auth_router.py  test_email_classifier.py  test_email_parser.py  test_email_processor.py  test_emails_router.py  test_encryption.py  test_jwt_service.py  test_odoo_auth.py  test_odoo_client.py  test_po_builder.py  test_po_drafts_router.py  test_po_tracking_router.py  test_product_matcher.py  test_settings_router.py  test_text_extractor.py  test_tracking_parser.py  test_triage_router.py  test_vendor_matcher.py  test_worker_config.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx
frontend/src/api/: client.ts
frontend/src/types/: index.ts
(+20 files in other folders)
