[project]
name = "odoo-mailmunch"
version = "0.1.0"
description = "Email-to-Purchase-Order integration for Odoo"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "arq>=0.26.0",
    "httpx>=0.28.0",
    "PyJWT>=2.8.0",
    "cryptography>=44.0.0",
    "python-multipart>=0.0.18",
    "pdfplumber>=0.11.0",
    "openpyxl>=3.1.0",
    "python-dateutil>=2.9.0",
    "rapidfuzz>=3.10.0",
    "msgraph-sdk>=1.12.0",
    "azure-identity>=1.19.0",
    "extract-msg>=0.48.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "aiosqlite>=0.20.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.setuptools.packages.find]
include = ["app*"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
